feat: update swagger & create campaign with version
